Implement login page backend and frontend functionality
Server checks login credentials and set cookie for the session, redirecting to homepage if successful. Add logout API, still need proper implementation in backend. Moved some custom css classes to general file because could be shared among many pages.
